--- a/css/connexion.css
+++ b/css/connexion.css
@@ -53,6 +53,12 @@ main section:nth-of-type(2)>div {
     display: flex;    
 }
 
+main section:nth-of-type(1) img {
+    
+    width: 550px;
+    height: 70vh;
+  
+}
 main section:nth-of-type(2) img {
     
     width: 550px;
