--- a/css/rappelmed.css
+++ b/css/rappelmed.css
@@ -51,6 +51,7 @@ header .bleu {
     /* Style général du bouton */
     .custom-button {
       display: flex;
+      justify-content: space-between;
       padding: 20px 20px;
       margin: 20px;
       background-color: #ce3eb1;
@@ -60,26 +61,30 @@ header .bleu {
       cursor: pointer;
       font-size: 16px;
       width: 300px;
-      
     }
+
+    
 
     svg {
         fill: white;
-        width: 20px;
         height: 20px;
-    }
+        width: 20px;
+        
+          
+     }
 
     #form {
         border-radius: 30px;
         
     }
 
-    /* Style du label à l'intérieur du bouton 
+    /*Style du label à l'intérieur du bouton 
     .custom-button label {
       position: relative;
       z-index: 2;
     }
     */
+    
 
     /* Style du fond du bouton 
     .custom-button::before {
