--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,14 @@ header #logo {
     height: 600px;
     width: 400px;
 }
-
+header nav {
+    width: 80%;
+}
 header nav ul {
     display: flex;
     justify-content: space-between;
     padding: 10px;
+    
 }
 header nav ul li {
     margin: 30px;
@@ -36,7 +39,8 @@ header nav ul li {
 }
 
 header a {
-    text-decoration: none;
+    list-style: none;
+    text-decoration: none ;
 }
 
 header .bleu {
@@ -56,6 +60,20 @@ header .bleu {
     width: 100%;
     height: 100%;
     }
+    .video-container {
+        position: relative;
+        width: 80%;
+        overflow: hidden;
+        padding-top: 56.25%; /* 16:9 aspect ratio (height/width) */
+      }
+  
+      .video-container iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
 
     main #first_section  div:nth-of-type(2){
         display:block;
@@ -169,14 +187,17 @@ footer {
 }
 
 #div_footer {
-    dislay:flex;
+    display:flex;
     justify-content: space-between;
     
 }
-footer #fonctionnalities{
+footer #Fonctionnalities{
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
+    flex-wrap: wrap;
+    width: 80%;
+    color: white;
+    margin: 10px;
 }
 
 #footer_logo {
