--- a/css/connexion.css
+++ b/css/connexion.css
@@ -56,19 +56,36 @@ main #procedure {
     flex-direction: row;
     justify-content: space-around;
 }
+ #procedure_image {
+    display:inline;
+    justify-content: space-between;
+    border: 2px solid black;
+    width: 300px;
+
+}
 main #procedure form {
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 300px;
+    padding: 20px;
+    margin: 20px;
+    border: 2px solid #ff0095;
 }
 
 
 main section #globe {
-    align-items: end;
+    border: 2px solid red;
+    width: 450px;
 }
 
-main section:nth-of-type(2)>div {
-    display: flex;    
+main section:nth-of-type(1)>div {
+    display: flex; 
+    justify-content: space-evenly;   
+}
+
+main #procedure button {
+    padding: 20px;
+    margin: 20px;
 }
 
 main section:nth-of-type(1) img {
