--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,10 @@ body {
     width: 100wh;
 }
 /******************header************************/
-
+header {
+    display: flex;
+    justify-content: space-between;
+}
 header div:nth-of-type(1) {
     display: flex;
     justify-content: space-between;
@@ -22,6 +25,7 @@ header #logo {
 }
 header nav {
     width: 80%;
+    
 }
 header nav ul {
     display: flex;
@@ -171,6 +175,7 @@ header .bleu {
     main section:nth-of-type(3) #histoire {
         color: white;
         background-color: #49A3F2; 
+        width: 100%;
         display:flex;
         flex-direction: column;
         
